# capstone-project

./: CMakeLists.txt  README.md  package.xml
launch/: ardrone.launch  ardrone_all.launch  ardrone_tag.launch  test.launch
msg/: image.msg
scripts/: stop.sh
src/: error_ros.cpp  image_proc.cpp  linear_distance_ros.cpp  simplecanny.cpp
