<package>
  <name>ardrone_autonomy</name>
  <version>1.0.0</version>
  <description>ardrone_autonomy is a ROS driver for Parrot AR-Drone quadrocopter. This driver is based on official AR-Drone SDK version 2.0.1. This package has been developed as a Capstone project at the Univeristy of Toronto.</description>
  <author>Mustafa Safri, Gaurav Pikale, Joseph Chu</author>
  <maintainer email="safrimustafa@gmail.com">Mustafa Safri</maintainer>
  
  <license>TODO</license>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <!-- Fat SDK dependencies -->
  <build_depend>binutils</build_depend>
  <build_depend>daemontools</build_depend>
  <build_depend>sdl</build_depend>
  <build_depend>gtk2</build_depend>
  <build_depend>libxml2</build_depend>
  <build_depend>libudev-dev</build_depend>
  <build_depend>libiw-dev</build_depend>
  <build_depend>git</build_depend>

  <!-- ROS Driver -->
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>camera_info_manager</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roslint</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>camera_info_manager</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>

  <export>
    <rosdoc config="rosdoc.yaml"/>
  </export>

</package>
